# rwget

./: Cargo.toml  readme.md
.github/workflows/: release.yml
src/: lib.rs  main.rs
