[package]
name = "rwget"
version = "0.1.0"
edition = "2021"
description = "rwget"
repository = "https://github.com/ahaoboy/rwget"
homepage = "https://github.com/ahaoboy/rwget"
authors = ["ahaoboy"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = { version = "4.5", features = ["derive"] }

[profile.release]
debug = false
lto = true
strip = true
opt-level = "s"
codegen-units = 1