[package]
name = "rwget"
version = "0.1.1"
edition = "2021"
description = "rwget"
repository = "https://github.com/ahaoboy/rwget"
homepage = "https://github.com/ahaoboy/rwget"
authors = ["ahaoboy"]

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = { version = "4.5", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
debug = false
lto = true
strip = true
opt-level = "s"
codegen-units = 1